# face-reconstruction-with-ngp

./: .gitignore  README.md
client/: colmap2nerf.py  main.py  requirements.txt
server/: requirements.txt  run.py
server/parsing/: export.py  infer.py  run.sh
server/trt/: CMakeLists.txt
server/trt/include/: infer.h  rvm_hp.h  trt_model.h
server/trt/src/: infer.cu  rvm_hp.cu  trt_model.cu
